added jwt verification for middleware and completed access inside frontend
