# pb/service_gonuxt_starter.pb.gw.go
@@ -127,6 +127,25 @@ func local_request_GoNuxt_RefreshToken_0(ctx context.Context, marshaler runtime.
 	return msg, metadata, err
 }
 
+func request_GoNuxt_VerifyToken_0(ctx context.Context, marshaler runtime.Marshaler, client GoNuxtClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq emptypb.Empty
+		metadata runtime.ServerMetadata
+	)
+	io.Copy(io.Discard, req.Body)
+	msg, err := client.VerifyToken(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_GoNuxt_VerifyToken_0(ctx context.Context, marshaler runtime.Marshaler, server GoNuxtServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq emptypb.Empty
+		metadata runtime.ServerMetadata
+	)
+	msg, err := server.VerifyToken(ctx, &protoReq)
+	return msg, metadata, err
+}
+
 // RegisterGoNuxtHandlerServer registers the http handlers for service GoNuxt to "mux".
 // UnaryRPC     :call GoNuxtServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -212,6 +231,26 @@ func RegisterGoNuxtHandlerServer(ctx context.Context, mux *runtime.ServeMux, ser
 			return
 		}
 		forward_GoNuxt_RefreshToken_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
+	mux.Handle(http.MethodGet, pattern_GoNuxt_VerifyToken_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/pb.GoNuxt/VerifyToken", runtime.WithHTTPPathPattern("/v1/verify_token"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_GoNuxt_VerifyToken_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_GoNuxt_VerifyToken_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
 
 	return nil
@@ -321,6 +360,23 @@ func RegisterGoNuxtHandlerClient(ctx context.Context, mux *runtime.ServeMux, cli
 		}
 		forward_GoNuxt_RefreshToken_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodGet, pattern_GoNuxt_VerifyToken_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/pb.GoNuxt/VerifyToken", runtime.WithHTTPPathPattern("/v1/verify_token"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_GoNuxt_VerifyToken_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_GoNuxt_VerifyToken_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	return nil
 }
 
@@ -329,6 +385,7 @@ var (
 	pattern_GoNuxt_LoginUser_0    = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "login_user"}, ""))
 	pattern_GoNuxt_UpdateUser_0   = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "update_user"}, ""))
 	pattern_GoNuxt_RefreshToken_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "refresh_token"}, ""))
+	pattern_GoNuxt_VerifyToken_0  = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "verify_token"}, ""))
 )
 
 var (
@@ -336,4 +393,5 @@ var (
 	forward_GoNuxt_LoginUser_0    = runtime.ForwardResponseMessage
 	forward_GoNuxt_UpdateUser_0   = runtime.ForwardResponseMessage
 	forward_GoNuxt_RefreshToken_0 = runtime.ForwardResponseMessage
+	forward_GoNuxt_VerifyToken_0  = runtime.ForwardResponseMessage
 )
